[package]
name = "resport"
description = "CLI tool to tell you the dimensions or aspect ratio of an image, or if it is landscape or portrait"
version = "1.0.0"
edition = "2021"

repository = "https://github.com/grayfallstown/resport"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities", "multimedia::images"]


[dependencies]
image = "0.25.2"
clap = { version="4.5.40", features=["derive"]}

[profile.release]
opt-level = "z"
lto = "fat"
strip = true
debug = false
panic = 'abort'
incremental = false
codegen-units = 1
